--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -245,7 +245,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/httpsabrartarafder.github.ioportfolio-short.png") top center;
+  background: url("../img/skyline.png") top center;
   background-size: cover;
 }
 
