--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -601,7 +601,8 @@ section {
     display: inline-block;
   }
   .social-icons {
-    display: inline;
+    display: inline-block !important;
+
    
   }
 }
