--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -613,6 +613,7 @@ section {
 .social-icons .nav-link {
   text-align: left !important;
   margin-bottom: 20px;
+  margin-left: 1rem !important;
 }
 
 
