--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,10 +22,16 @@ a:hover {
   border-top: 1px solid #ddd;
   margin: 10px 0;
   width: 250px;
+  margin-bottom: 3rem;
 }
 .title {
   color: #666;
   font-weight: bold;
+}
+
+
+.clock:hover{
+  color: rgb(79, 77, 77) !important;
 }
 
 
